feat: account confirmation feature, SMTP adapter
